Allowed to take multiple productus while saving untis