@@ -13,10 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -30,33 +27,22 @@ public class DailyProductionServiceImpl implements DailyProductionService {
     private final ProductRepository productRepo;
 
     @Override
-    public DailyProductionResponseDto create(DailyProductionRequestDto dto) {
-        Product p = productRepo.findById(dto.getId()).orElseThrow(() -> new IllegalArgumentException("Product not found: " + dto.getId()));
-        DailyProductionMaster d = DailyProductionMaster.builder()
-                .date(dto.getDate())
-                .product(p)
-                .remarks(dto.getRemarks())
-                .build();
-
-        return toDto(dailyRepo.save(d));
-    }
-
     @Transactional
     public List<DailyProductionResponseDto> createMany(DailyProductionRequestDto dto) {
-        List<Long> ids = dto.getProductIds().stream().distinct().collect(Collectors.toList());
+        List<Long> ids = new ArrayList<>(new LinkedHashSet<>(dto.getProductIds()));
         List<Product> products = productRepo.findAllById(ids);
 
         Set<Long> found = products.stream().map(Product::getId).collect(Collectors.toSet());
-        List<Long> missing = ids.stream().filter(id -> !found.contains(id)).collect(Collectors.toList());
+        List<Long> missing = ids.stream().filter(id -> !found.contains(id)).toList();
         if (!missing.isEmpty()) {
             throw new IllegalArgumentException("Products not found: " + missing);
         }
 
         Map<Long, Product> idToProduct = products.stream()
-                .collect(Collectors.toMap(Product::getId, Function.identity()));
+                .collect(Collectors.toMap(Product::getId, Function.identity(), (a,b) -> a));
 
         List<DailyProductionMaster> toSave = new ArrayList<>();
-        for (Long pid : dto.getProductIds()) {
+        for (Long pid : ids) {
             Product p = idToProduct.get(pid);
             DailyProductionMaster d = DailyProductionMaster.builder()
                     .date(dto.getDate())
@@ -81,22 +67,20 @@ public class DailyProductionServiceImpl implements DailyProductionService {
     }
 
     private DailyProductionResponseDto toDto(DailyProductionMaster d) {
-        Product p = d.getProduct();
-        ProductResponseDto prodDto = ProductResponseDto.builder()
-                .id(p.getId())
-                .productName(p.getProductName())
-                .colour(p.getColour())
-                .type(p.getType())
-                .unit(p.getUnit())
-                .weight(p.getWeight())
-                .quantity(p.getQuantity())
-                .build();
-
         return DailyProductionResponseDto.builder()
                 .id(d.getId())
                 .date(d.getDate())
                 .remarks(d.getRemarks())
-                .product(prodDto)
+                .product(ProductResponseDto.builder()
+                        .id(d.getProduct().getId())
+                        .productName(d.getProduct().getProductName())
+                        .type(d.getProduct().getType())
+                        .colour(d.getProduct().getColour())
+                        .unit(d.getProduct().getUnit())
+                        .weight(d.getProduct().getWeight())
+                        .quantity(d.getProduct().getQuantity())
+                        .build()
+                )
                 .build();
     }
 }
